# lora

./: .gitignore  GRAYSCALE_SOLUTION_C.md  PAPER_PROMPT_FORMAT.md  README.md  SOLUTION_C_SUMMARY.md  TECHNICAL_IMPROVEMENTS.md  TRAINING_INSTRUCTIONS.md  YOLO_MULTISCALE_INTEGRATION.md  check_data_leakage.py  config.yaml  prepare_yolo_dataset.py  pyproject.toml  resplit_dataset.py
neu_det_pipeline/: __init__.py  caption.py  cli.py  config.py  data.py  generation.py  guidance.py  keywords.py  lora_train.py  metrics.py  pipeline.py  prompts.py  textual_inversion.py  validation.py
neu_det_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/metadata/: train_metadata.json  val_metadata.json
